--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-navigation/stack": "^5.14.4",
     "axios": "^0.21.1",
     "expo": "~41.0.0",
+    "expo-image-picker": "~10.1.3",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-icons": "^4.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.1.0",
